software/shows/equalizer-test/log
  File "test1.py", line 192
    sys.stderr.write("WARNING: Packet Dropped\n
                                              ^
SyntaxError: EOL while scanning string literal
